--- a/ProyectoFinal-Aplicada2/_Imports.razor
+++ b/ProyectoFinal-Aplicada2/_Imports.razor
@@ -7,3 +7,6 @@
 @using Microsoft.JSInterop
 @using ProyectoFinal_Aplicada2
 @using ProyectoFinal_Aplicada2.Shared
+@using ProyectoFinal_Aplicada2.Models
+@using ProyectoFinal_Aplicada2.Controllers;
+@inject ProductosControllers productoscontrollers 
