Diseño de registro de usuario

--- a/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
@@ -1,4 +1,7 @@
-﻿
+﻿@page "/UsuariosComponent/{Id:int}"
+
+@using ProyectoFinal_Aplicada2.Controllers;
+@using ProyectoFinal_Aplicada2.Models;
     <style>
         * {
             margin: 0;
@@ -23,8 +26,123 @@
         }
     </style>
 
-<h3>UsuariosComponent</h3>
+    <section class="form-register">
+        <h3>Usuarios Component</h3>
+        <EditForm Model="@usuarios" OnValidSubmit="Guardar">
+            <DataAnnotationsValidator />
+
+            <div class="form-group">
+                <label for="usuario_number">UsuarioId</label>
+                <InputNumber id="usuario_number" class="form-control" @bind-Value="usuarios.UsuarioId"></InputNumber>
+                <ValidationMessage For="(() => usuarios.UsuarioId)" />
+                <button type="button" class="btn btn-primary" @onclick="Buscar">Buscar</button>
+            </div>
+
+            <div class="form-group">
+                <label for="NombrePersona_text"></label>
+                <InputText id="NombrePersona_text" class="form-control" @bind-Value="usuarios.NombrePersona"></InputText>
+                <ValidationMessage For="(() => usuarios.NombrePersona)" />
+            </div>
+
+            <div class="form-group">
+                <label for="EmailUsuario_text"></label>
+                <InputText id="EmailUsuario_text" class="form-control" @bind-Value="usuarios.EmailUsuario"></InputText>
+                <ValidationMessage For="(() => usuarios.EmailUsuario)" />
+            </div>
+
+            <div class="form-group">
+                <label for="Clave_text"></label>
+                <InputText id="Clave_text" class="form-control" @bind-Value="usuarios.Clave"></InputText>
+                <ValidationMessage For="(() => usuarios.Clave)" />
+            </div>
+
+            <div class="form-group">
+                <label for="ConfirmarClave_text"></label>
+                <InputText id="ConfirmarClave_text" class="form-control" @bind-Value="usuarios.ConfirmarClave"></InputText>
+                <ValidationMessage For="(() => usuarios.ConfirmarClave)" />
+            </div>
+
+            <div class="form-group">
+                <label for="NivelUsuario_text" class="form-control" ></label>
+                <InputSelect @bind-Value="@usuarios.NivelUsuario">
+                    <option value="Administrador" >Administrador</option>
+                    <option value="Contador" >Contador</option>
+                    <option value="Cajero" >Cajero</option>
+                </InputSelect>
+                <ValidationMessage For="(() => usuarios.NivelUsuario)" />
+            </div>
+
+            <div class="form-group">
+                <label for="FechaIngreso_date"></label>
+                <InputDate id="FechaIngreso_date" class="form-control" @bind-Value="usuarios.FechaIngreso"></InputDate>
+                <ValidationMessage For="(() => usuarios.FechaIngreso)" />
+            </div>
+
+
+            <div>
+                <button type="button" class="btn btn-danger" @onclick="Limpiar">Nuevo</button>
+                <button type="submit" class="btn btn-success">Guardar</button>
+                <button type="button" class="btn btn-secondary" @onclick="Eliminar">Eliminar</button>
+            </div>
+        </EditForm>
+    </section>
+<br />
+<br />
 
 @code {
+    [Parameter]
+    public int Id { get; set; }
+    public string Mensaje { get; set; }
+    public string Seleccion { get; set; }
 
+    Usuarios usuarios = new Usuarios();
+
+    protected override void OnInitialized()
+    {
+        UsuariosControllers controller = new UsuariosControllers();
+        Limpiar();
+        Mensaje = string.Empty;
+        if(Id != 0)
+        {
+            usuarios = controller.Buscar(Id);
+        }
+    }
+
+    public string Encriptar(string cadenaEncriptada)
+    {
+        string resultado = string.Empty;
+        byte[] encryted = System.Text.Encoding.Unicode.GetBytes(cadenaEncriptada);
+        resultado = Convert.ToBase64String(encryted);
+
+        return resultado;
+    }
+
+    public string DesEncriptar(string cadenaDesencriptada)
+    {
+        string resultado = string.Empty;
+        byte[] decryted = Convert.FromBase64String(cadenaDesencriptada);
+        resultado = System.Text.Encoding.Unicode.GetString(decryted);
+
+        return resultado;
+    }
+
+    private void Limpiar()
+    {
+        usuarios = new Usuarios();
+    }
+    
+    private void Guardar()
+    {
+
+    }
+    
+    private void Eliminar()
+    {
+
+    }
+    
+    private void Buscar()
+    {
+
+    }
 }
