--- a/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
@@ -40,31 +40,31 @@
         </div>
 
         <div class="form-group">
-            <label for="NombrePersona_text"></label>
+            <label for="NombrePersona_text">Nombre</label>
             <InputText id="NombrePersona_text" class="form-control" @bind-Value="usuarios.NombrePersona"></InputText>
             <ValidationMessage For="(() => usuarios.NombrePersona)" />
         </div>
 
         <div class="form-group">
-            <label for="EmailUsuario_text"></label>
+            <label for="EmailUsuario_text">Email</label>
             <InputText id="EmailUsuario_text" class="form-control" @bind-Value="usuarios.EmailUsuario"></InputText>
             <ValidationMessage For="(() => usuarios.EmailUsuario)" />
         </div>
 
         <div class="form-group">
-            <label for="Clave_text"></label>
+            <label for="Clave_text">Clave</label>
             <InputText id="Clave_text" type="password" class="form-control" @bind-Value="usuarios.Clave"></InputText>
             <ValidationMessage For="(() => usuarios.Clave)" />
         </div>
 
         <div class="form-group">
-            <label for="ConfirmarClave_text"></label>
+            <label for="ConfirmarClave_text">Confirmar Clave</label>
             <InputText id="ConfirmarClave_text" type="password" class="form-control" @bind-Value="usuarios.ConfirmarClave"></InputText>
             <ValidationMessage For="(() => usuarios.ConfirmarClave)" />
         </div>
 
         <div class="form-group">
-            <label for="NivelUsuario_text" class="form-control"></label>
+            <label for="NivelUsuario_text" class="form-control">Nivel de Usuario</label>
             <InputSelect @bind-Value="@usuarios.NivelUsuario">
                 <option value="Administrador">Administrador</option>
                 <option value="Contador">Contador</option>
@@ -74,7 +74,7 @@
         </div>
 
         <div class="form-group">
-            <label for="FechaIngreso_date"></label>
+            <label for="FechaIngreso_date">Fecha de Ingreso</label>
             <InputDate id="FechaIngreso_date" class="form-control" @bind-Value="usuarios.FechaIngreso"></InputDate>
             <ValidationMessage For="(() => usuarios.FechaIngreso)" />
         </div>
