Haciendo el registro y consulta de productos, compras y proveedores

--- a/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
+++ b/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
@@ -13,15 +13,37 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="productos">
+                <span class="oi oi-plus" aria-hidden="true"></span> Productos
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="proveedores">
+                <span class="oi oi-plus" aria-hidden="true"></span> Proveedores
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="compra">
+                <span class="oi oi-plus" aria-hidden="true"></span> Compra
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="consultaproveedor">
+                <span class="oi oi-book" aria-hidden="true"></span> Consulta proveedores
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="consultaproductos">
+                <span class="oi oi-book" aria-hidden="true"></span> Consulta Productos
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="consultacompras">
+                <span class="oi oi-book" aria-hidden="true"></span> Consulta compras
+            </NavLink>
+        </li>
+
     </ul>
 </div>
 
