--- a/ProyectoFinal-Aplicada2/_Imports.razor
+++ b/ProyectoFinal-Aplicada2/_Imports.razor
@@ -9,4 +9,6 @@
 @using ProyectoFinal_Aplicada2.Shared
 @using ProyectoFinal_Aplicada2.Models
 @using ProyectoFinal_Aplicada2.Controllers;
-@inject ProductosControllers productoscontrollers 
+@inject ProductosControllers productoscontrollers
+@inject ProveedoresControllers proveedorescontrollers
+@inject ComprasControllers comprascontroller
