--- a/ProyectoFinal-Aplicada2/Pages/_Host.cshtml
+++ b/ProyectoFinal-Aplicada2/Pages/_Host.cshtml
@@ -32,5 +32,7 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+
 </body>
 </html>
