--- a/ProyectoFinal-Aplicada2/_Imports.razor
+++ b/ProyectoFinal-Aplicada2/_Imports.razor
@@ -12,3 +12,6 @@
 @inject ProductosControllers productoscontrollers
 @inject ProveedoresControllers proveedorescontrollers
 @inject ComprasControllers comprascontroller
+@inject VentasControllers ventascontroller
+@inject UsuariosControllers usuariocontroller
+@inject PagosControllers pagoscontroller
