Cambiando el color de boton

--- a/ProyectoFinal-Aplicada2/Pages/ProductosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ProductosComponent.razor
@@ -85,7 +85,7 @@
             <InputNumber @bind-Value="productos.PrecioVentas" ReadOnly="true" class="form-control" @onchange="CalcularPrecioDeVenta"></InputNumber>
         </div>
 
-        <button type="button" class="btn btn-primary" @onclick="Nuevo">Nuevo</button>
+        <button type="button" class="btn btn-info" @onclick="Nuevo">Nuevo</button>
         <button type="submit" class="btn btn-primary" @onclick="CalcularPrecioDeVenta">Guardar</button>
         <button type="button" class="btn btn-danger" @onclick="Eliminar">Eliminar</button>
 
