--- a/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
@@ -32,7 +32,7 @@
     <h3>Productos</h3>
     <h3>@mensaje</h3>
     <EditForm Model="compras" OnValidSubmit="Guardar">
-        <DataAnnotationsValidator></DataAnnotationsValidator>
+        <DataAnnotationsValidator/>
         <label for="Id">CompraId</label>
         <div class="row">
             <div class="col-md-8">
@@ -95,7 +95,7 @@
                     <th>Cantidad</th>
                     <th>PrecioCompra</th>
                     <th>SubTotal</th>
-                    <th>Remover</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody class="bg-white">
