--- a/ProyectoFinal-Aplicada2/Pages/ProductosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ProductosComponent.razor
@@ -31,7 +31,7 @@
     <h3>Productos</h3>
     <h3>@mensaje</h3>
     <EditForm Model="productos" OnValidSubmit="Guardar">
-        <DataAnnotationsValidator></DataAnnotationsValidator>
+        <DataAnnotationsValidator/>
         <label for="Id">ProductoId</label>
         <div class="row">
             <div class="col-md-8">
@@ -45,7 +45,7 @@
 
             <div class="col-md-4">
 
-                <button type="button" class="btn btn-success" @onclick="Buscar">Buscar</button>
+                <button type="button" class="btn btn-primary" @onclick="Buscar">Buscar</button>
 
             </div>
         </div>
@@ -85,8 +85,8 @@
             <InputNumber @bind-Value="productos.PrecioVentas" ReadOnly="true" class="form-control" @onchange="CalcularPrecioDeVenta"></InputNumber>
         </div>
 
-        <button type="button" class="btn btn-primary" @onclick="Nuevo">Nuevo</button>
-        <button type="submit" class="btn btn-primary" @onclick="CalcularPrecioDeVenta">Guardar</button>
+        <button type="button" class="btn btn-secondary" @onclick="Nuevo">Nuevo</button>
+        <button type="submit" class="btn btn-success" @onclick="CalcularPrecioDeVenta">Guardar</button>
         <button type="button" class="btn btn-danger" @onclick="Eliminar">Eliminar</button>
 
     </EditForm>
