--- a/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
@@ -1,4 +1,5 @@
-﻿@page "/UsuariosComponent/{Id:int}"
+﻿@page "/Usuarios"
+@page "/Usuarios/{Id:int}"
 
 @using ProyectoFinal_Aplicada2.Controllers;
 @using ProyectoFinal_Aplicada2.Models;
@@ -147,8 +148,8 @@
     private void Guardar()
     {
         UsuariosControllers controller = new UsuariosControllers();
-        
-         if(usuarios.UsuarioId > 0)
+
+        if (usuarios.UsuarioId > 0)
         {
             if (ExisteEnLaBaseDeDatos(usuarios.UsuarioId))
             {
