Agregando Consultas de Ventas y Pagos

--- a/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
@@ -1,4 +1,4 @@
-﻿@page "/ConsultaUsuario"
+﻿@page "/ConsultaUsuarios"
 
 @using ProyectoFinal_Aplicada2.Controllers;
 @using ProyectoFinal_Aplicada2.Models;
