--- a/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
+++ b/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
@@ -12,35 +12,68 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
+
+        @*Registros*@
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="productos">
+            <NavLink class="nav-link" href="Usuarios">
+                <span class="oi oi-plus" aria-hidden="true"></span> Usuarios
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Productos">
                 <span class="oi oi-plus" aria-hidden="true"></span> Productos
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="proveedores">
+            <NavLink class="nav-link" href="Proveedores">
                 <span class="oi oi-plus" aria-hidden="true"></span> Proveedores
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="compra">
+            <NavLink class="nav-link" href="Compra">
                 <span class="oi oi-plus" aria-hidden="true"></span> Compra
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="consultaproveedor">
-                <span class="oi oi-book" aria-hidden="true"></span> Consulta proveedores
+            <NavLink class="nav-link" href="Ventas">
+                <span class="oi oi-plus" aria-hidden="true"></span> Ventas
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Pagos">
+                <span class="oi oi-plus" aria-hidden="true"></span> Pagos
             </NavLink>
         </li>
 
+        @*Consultas*@
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="consultaproductos">
-                <span class="oi oi-book" aria-hidden="true"></span> Consulta Productos
+            <NavLink class="nav-link" href="ConsultaUsuarios">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Usuarios
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="consultacompras">
-                <span class="oi oi-book" aria-hidden="true"></span> Consulta compras
+            <NavLink class="nav-link" href="ConsultaProductos">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Productos
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ConsultaProveedores">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta proveedores
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ConsultaCompras">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Compras
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ConsultaVentas">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Ventas
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ConsultaPagos">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Pagos
             </NavLink>
         </li>
 
