Arreglando erroes de copiar y pegar y agrgando funcion de borrar detalle en Compra

--- a/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
@@ -29,7 +29,7 @@
 </style>
 
 <section class="form-register">
-    <h3>Usuarios Component</h3>
+    <h3>Usuarios</h3>
     <EditForm Model="@usuarios" OnValidSubmit="Guardar">
         <DataAnnotationsValidator />
         <label class="text-muted form-text">@Mensaje</label>
