--- a/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
@@ -1,5 +1,5 @@
-﻿@page "/Compra"
-@page "/Compra/{Id:int}"
+﻿@page "/Compras"
+@page "/Compras/{Id:int}"
 
 
 <h3>Compras</h3>
@@ -28,7 +28,7 @@
     </style >
 
 <section class="form-register">
-    <h3>Productos</h3>
+    <h3>Compras</h3>
     <h3>@mensaje</h3>
     <EditForm Model="compras" OnValidSubmit="Guardar">
         <DataAnnotationsValidator/>
@@ -80,7 +80,7 @@
 
         </div>
         <br />
-        <button class="btn btn-outline-primary" @onclick="AgregarAsignatura">Agregar</button>
+        <button class="btn btn-outline-primary" @onclick="AgregarProducto">Agregar</button>
 
         <br />
 
@@ -158,7 +158,7 @@
         }
     }
 
-    private void nuevo()
+    private void Nuevo()
     {
         this.compras = new Compras();
         mensaje = string.Empty;
@@ -217,7 +217,7 @@
     }
 
 
-    private void AgregarAsignatura()
+    private void AgregarProducto()
     {
 
         this.compras.ComprasDetalles.Add(new ComprasDetalle
@@ -237,8 +237,16 @@
         compras.Balance = PrecioCompra * Cantidad;
     }
 
-    private void EliminarDetalle()
+    private void EliminarDetalle(ComprasDetalle detalle)
     {
+        try
+        {
+            compras.ComprasDetalles.Remove(detalle);
+        }
+        catch (Exception)
+        {
 
+            //
+        }
     }
 }
