--- a/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
@@ -45,7 +45,7 @@
 
             <div class="col-md-4">
 
-                <button type="button" class="btn btn-success" @onclick="Buscar">Buscar</button>
+                <button type="button" class="btn btn-primary" @onclick="Buscar">Buscar</button>
 
             </div>
         </div>
